...
                        .cornerRadius(10)
                        .padding(.horizontal)
                }
                .padding(.bottom, 10)
            }
        }
        .navigationTitle("Cart")
    }
}



